appId: com.sentaient.icebreaker
---
- launchApp
- assertVisible: "Check In Here"
- tapOn: "Check In Here"
- assertVisible: "Checked in securely!"
- tapOn: "OK"
